force-app/main/default/objects/xDO_Base_QBrix_Register__mdt.object
<CustomObject>
    <description>WHAT: Central register that all QBrixes should write to when they&apos;re installed
        into an xDO.
        WHO: NextGen Demos Team
        WHEN: Nov 2021</description>
    <fields>
        <fullName>xDO_Content_Type__c</fullName>
        <label>Content Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metadata only</fullName>
                </value>
                <value>
                    <fullName>Record Data only</fullName>
                </value>
                <value>
                    <fullName>Metadata_and_Record_Data</fullName>
                    <label>Metadata and Record Data</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xDO_Description__c</fullName>
        <description>WHAT: What this particular QBrix does
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xDO_Documentation_Link__c</fullName>
        <description>WHAT: URL to QBrix documentation which could include installation, configuration or general QBrix information
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
        <label>Documentation Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xDO_Publisher__c</fullName>
        <description>WHAT: Name of the QBrix owner/publisher
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
        <label>Publisher</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_Repository_URL__c</fullName>
        <description>WHAT: Link to the Github/Source Control repository for this QBrix
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
        <label>Repository URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xDO_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Component</fullName>
                </value>
                <value>
                    <fullName>Sales Play</fullName>
                </value>
                <value>
                    <fullName>Industry Solution</fullName>
                </value>
                <value>
                    <fullName>End to End Demo</fullName>
                </value>
                <value>
                    <fullName>Data Pack</fullName>
                </value>
                <value>
                    <fullName>Localization Pack</fullName>
                </value>
                <value>
                    <fullName>Base xDO Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xDO_Version__c</fullName>
        <description>WHAT: Version of the QBrix installed
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
        <label>Version</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Installed QBrix</label>
    <listViews>
        <fullName>All_Installed_QBrix</fullName>
        <columns>MasterLabel</columns>
        <columns>xDO_Type__c</columns>
        <columns>xDO_Publisher__c</columns>
        <columns>xDO_Version__c</columns>
        <columns>xDO_Content_Type__c</columns>
        <columns>xDO_Description__c</columns>
        <columns>xDO_Documentation_Link__c</columns>
        <columns>xDO_Repository_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Installed QBrix</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Installed QBrixes</pluralLabel>
</CustomObject>